activities-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activities-microservice-deployment
  labels:
    app: activities-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activities-microservice
  template:
    metadata:
      labels:
        app: activities-microservice 
    spec:
      containers:
      - name: activities-microservice
        image: juliepetrova/activities-microservice:latest
        # command: [ 'npx', 'prisma', 'migrate', 'deploy' ]
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: activities-microservice-service
spec:
  type: ClusterIP
  selector:
    app: activities-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
