activities-prisma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activities-prisma-deployment
  labels:
    app: activities-prisma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activities-prisma
  template:
    metadata:
      labels:
        app: activities-prisma 
    spec:
      containers:
      - name: activities-prisma
        image: postgres:13
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: activities-prisma-service
spec:
  selector:
    app: activities-prisma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5432
  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: postgres-pv-claim
      restartPolicy: Always
