calendar-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-microservice-deployment
  labels:
    app: calendar-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-microservice
  template:
    metadata:
      labels:
        app: calendar-microservice 
    spec:
      containers:
      - name: calendar-microservice
        image: juliepetrova/calendar-microservice:v1.0
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-microservice-service
spec:
  type: ClusterIP
  selector:
    app: calendar-microservice
  ports:
    - protocol: TCP
      port: 82
      targetPort: 3001
