calendar-prisma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-prisma-deployment
  labels:
    app: calendar-prisma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-prisma
  template:
    metadata:
      labels:
        app: calendar-prisma 
    spec:
      containers:
      - name: calendar-prisma
        image: postgres:13
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-prisma-service
spec:
  selector:
    app: calendar-prisma
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
