events-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-microservice-deployment
  labels:
    app: events-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-microservice
  template:
    metadata:
      labels:
        app: events-microservice 
    spec:
      containers:
      - name: events-microservice
        image: juliepetrova/events-microservice:latest
        command: [ 'npx', 'prisma', 'migrate', 'deploy' ]
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: events-microservice-service
spec:
  type: ClusterIP
  selector:
    app: events-microservice
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3002
