frontend-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-admin-deployment
  labels:
    app: frontend-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-admin
  template:
    metadata:
      labels:
        app: frontend-admin
    spec:
      containers:
      - name: frontend-admin
        image: juliepetrova/gss-employee-frontend:v1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin-service
spec:
  type: ClusterIP
  selector:
    app: frontend-admin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
