frontend-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-client-deployment
  labels:
    app: frontend-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-client
  template:
    metadata:
      labels:
        app: frontend-client
    spec:
      containers:
      - name: frontend-client
        image: juliepetrova/gss-client-frontend:v1.0
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-client-service
spec:
  type: ClusterIP
  selector:
    app: frontend-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
