reservation-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-microservice-deployment
  labels:
    app: reservation-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-microservice
  template:
    metadata:
      labels:
        app: reservation-microservice
    spec:
      containers:
      - name: reservation-microservice
        image: juliepetrova/reservations-microservice:latest
        command: [ 'npx', 'prisma', 'migrate', 'deploy' ]
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-microservice-service
spec:
  type: ClusterIP
  selector:
    app: reservation-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
