user-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice-deployment
  labels:
    app: user-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      labels:
        app: user-microservice 
    spec:
      containers:
      - name: user-microservice
        image: juliepetrova/user-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: user-microservice-service
spec:
  type: ClusterIP
  selector:
    app: user-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3007
