ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # ingressClassName: nginx
  rules:
  - host: gss.info
    http:
      paths:
      - path: /activities(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: activities-microservice-service
            port:
              number: 80
  - host: gss.info
    http:
      paths:
      - path: /food(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: foodapi-microservice-service
            port:
              number: 80
  # - host: gss.info
  #   http:
  #     paths:
  #     - path: /events
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: events-microservice-service
  #           port:
  #             number: 81
  # - http:
  #     paths:
  #     - path: /calendar
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: calendar-microservice-service
  #           port:
  #             number: 82
  # - http:
  #     paths:
  #     - path: /client
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend-client-service
  #           port:
  #             number: 80
  # - http:
  #     paths:
  #     - path: /admin
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend-admin-service
  #           port:
  #             number: 8080
